[gd_scene load_steps=11 format=3 uid="uid://da31rdk83ydat"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_24la8"]
[ext_resource type="Texture2D" uid="uid://c4p1t34oocdom" path="res://sprite_sheet.webp" id="2_4m134"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cqt3j"]
radius = 15.0
height = 68.0

[sub_resource type="Animation" id="Animation_uwmmv"]
resource_name = "idle_nosword"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_5ymuo"]
resource_name = "idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [13, 14, 15, 16]
}

[sub_resource type="Animation" id="Animation_lpg8x"]
resource_name = "attack_1"
length = 1.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.5, 0.6, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 0, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_el1ie"]
resource_name = "fall"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}

[sub_resource type="Animation" id="Animation_8is6s"]
resource_name = "walk"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [17, 18, 19, 20]
}

[sub_resource type="Animation" id="Animation_dquix"]
resource_name = "sprint"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [21, 22, 23, 24]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_381kf"]
_data = {
"attack_1": SubResource("Animation_lpg8x"),
"fall": SubResource("Animation_el1ie"),
"idle": SubResource("Animation_5ymuo"),
"idle_nosword": SubResource("Animation_uwmmv"),
"sprint": SubResource("Animation_dquix"),
"walk": SubResource("Animation_8is6s")
}

[node name="CharacterBody2D" type="CharacterBody2D"]
script = ExtResource("1_24la8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_cqt3j")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, 1)
scale = Vector2(1.11214, 1.07645)
texture = ExtResource("2_4m134")
hframes = 5
vframes = 5
frame = 8

[node name="PlayerCamera" type="Camera2D" parent="."]
position_smoothing_enabled = true

[node name="WallJumpInputSupresstionTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.1
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.15
one_shot = true

[node name="WallCoyoteTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.1
one_shot = true

[node name="JumpBufferTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.1
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_381kf")
}
